Automated Code Change
PiperOrigin-RevId: 608893444